# naughts-and-crosses

./: .gitignore
client/: package.json
client/src/: middleware.ts.old
client/src/components/button/: Button.tsx
client/src/components/input/: Input.tsx
client/src/components/registration/: Registration.tsx
client/src/components/usernameInput/: UsernameInput.tsx
client/src/pages/: index.tsx  profile.tsx
client/src/server/api/routers/: user.ts
client/src/server/services/: userService.ts
client/src/utils/: cookieHandler.ts
server/: .env  Cargo.toml  docker-compose.yml  go.mod  go.sum  justfile  main.go
server/internal/database/: models.go  queries.sql.go
server/internal/helpers/: httpHelper.go
server/internal/migrations/: migrations.go
server/internal/migrations/sqlMigrations/: 000001_initial-db-setup.up.sql
server/internal/resources/routesResource/: routesResource.go
server/internal/resources/usersResource/: usersResource.go
server/internal/templates/: index.html  loginSuccessful.html  registrationSuccess.html
server/internal/templates/partials/: registrationSuccess.html
server/internal/userService/: userService.go
server/migrations/2023-02-21-104635_initial_migration/: up.sql
server/sqlc/: queries.sql  sqlc.yaml
server/src/: main.rs  schema.rs
server/src/controllers/: user_controller.rs
server/src/database_models/: users.rs
server/src/services/: user_service.rs
