[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
actix-web = "4.3.0"
derive_more = "0.99.17"
env = "0.0.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
